--- a/Nature.css
+++ b/Nature.css
@@ -6,7 +6,7 @@ html{
 
 
 div {
-    text-align: center;
+    text-align: centre;
    
     
 }
@@ -14,5 +14,5 @@ div {
 img{
     width: 50%;
     height: auto;
-     margin-top: 300px;
+     margin-top: 20px;
 }
