--- a/Nature.css
+++ b/Nature.css
@@ -7,11 +7,13 @@ html{
 
 div {
     text-align: centre;
-    margin-bottom: 400px;
+ 
 }
 
 img{
     width: 50%;
     height: auto;
+    margin-top: auto;
+    margin-bottom: 400px;
     
 }
