--- a/Nature.css
+++ b/Nature.css
@@ -1,18 +1,20 @@
 
 
+
+
 html{
     background-color: aquamarine;
 }
 
 
 div {
-    text-align: centre;
- 
+    text-align: center;
+   
+    
 }
 
 img{
     width: 50%;
     height: auto;
-    margin-top: 300px;
-    
+     margin-top: 300px;
 }
