--- a/Nature.css
+++ b/Nature.css
@@ -8,13 +8,13 @@ html{
 
 
 div {
-    text-align: center;
+    text-align: centre;
    
     
 }
 
 nature{
     width: 50%;
-    height: auto;
+    
      margin-top: 300px;
 }
